terraform/vpc.tf
data "aws_availability_zones" "available" {}

resource "aws_vpc" "turo" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "public" {
  vpc_id     = "${aws_vpc.turo.id}"
  cidr_block = "10.0.3.0/24"
  tags {
    Name = "public"
  }
}

resource "aws_subnet" "primary" {
  vpc_id     = "${aws_vpc.turo.id}"
  cidr_block = "10.0.1.0/24"
  availability_zone = "${data.aws_availability_zones.available.names[0]}"
  tags {
    Name = "primary"
  }
}

resource "aws_subnet" "secondary" {
  vpc_id     = "${aws_vpc.turo.id}"
  cidr_block = "10.0.2.0/24"
  availability_zone = "${data.aws_availability_zones.available.names[1]}"
  tags {
    Name = "secondary"
  }
}

resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.turo.id}"
}

resource "aws_route_table" "public" {
  vpc_id = "${aws_vpc.turo.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.gw.id}"
  }

  tags {
    Name = "public"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = "${aws_subnet.public.id}"
  route_table_id = "${aws_route_table.public.id}"
}

resource "aws_route_table" "private" {
  vpc_id = "${aws_vpc.turo.id}"

  route {
    cidr_block = "0.0.0.0/0"
    instance_id = "${aws_instance.nat.id}"
  }

  tags {
    Name = "private"
  }
}

resource "aws_route_table_association" "primary" {
  subnet_id      = "${aws_subnet.primary.id}"
  route_table_id = "${aws_route_table.private.id}"
}

resource "aws_route_table_association" "secondary" {
  subnet_id      = "${aws_subnet.secondary.id}"
  route_table_id = "${aws_route_table.private.id}"
}
